--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,7 @@ html{
         text-align: center;
         font-size: 4em;
         margin: 40px;
+        height: 100%;
     }
     h2{
     text-align: center;
