--- a/css/style.scss
+++ b/css/style.scss
@@ -114,6 +114,7 @@ html{
             transform: translateX(50%);
         }
         #back{
+            padding: 50px;
             position: absolute;
             background: white;
             width: 50%;
