--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ html * {
 html h1 {
   color: var(--clearcolor);
   text-align: center;
-  font-size: 4em;
+  font-size: 10em;
   margin: 40px;
   height: 100%;
 }
@@ -103,6 +103,12 @@ html img {
   background-color: var(--ligthcolor);
   width: 100%;
   height: 100vh;
+}
+
+.hero #Go {
+  color: var(--clearcolor);
+  font-size: 20em;
+  padding-bottom: 10px;
 }
 
 .hero .box {
