--- a/css/style.scss
+++ b/css/style.scss
@@ -19,7 +19,7 @@ html{
     h1{
         color: var(--clearcolor);
         text-align: center;
-        font-size: 4em;
+        font-size: 10em;
         margin: 40px;
         height: 100%;
     }
@@ -91,6 +91,11 @@ html{
     background-color: var(--ligthcolor);
     width: 100%;
     height: 100vh;
+    #Go{
+        color: var(--clearcolor);
+        font-size: 20em;
+        padding-bottom: 10px;
+    }
     .box{
         margin-top: auto;
         margin-left: auto;
