--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;700;900&family=Roboto:wght@300;400;700&display=swap');
-
+// DEFINE MY STANDARD CSS COMPONENTS USED OR NOT JET
 html{
         font-size: 62.5%; 
         --clearcolor: #FFFFFF;
@@ -87,11 +87,12 @@ html{
     }
 }
 
+// DEFINE MY CUSTOM CLASSES AND IDS
 .hero{
     background-color: var(--ligthcolor);
     width: 100%;
     height: 100vh;
-    #Go{
+    #Go{ //HERO WELCOME MESSAGE
         color: var(--clearcolor);
         font-size: 20em;
         padding-bottom: 10px;
@@ -153,11 +154,9 @@ html{
     .vertical{
         display: flex;
         flex-direction: column;
-        //justify-content: space-evenly;
         justify-content: flex-start;
-        //align-items: center;
     }
-    .swal2-styled.swal2-confirm {
+    .swal2-styled.swal2-confirm { //BUTTON COLOR OF SWAL
         background-color: var(--darkcolor);
     }
 }
